# practice

./: .gitignore  CMakeLists.txt  amg.py  bgl_def.hpp  cimg.cpp  eigen_sparse.cpp  flow.cpp  maxflow_bgl.cpp  stereo.cpp
cuda/: CMakeLists.txt  transpose.cu
cuda/cppIntegration/: CMakeLists.txt  kernel.cu  kernel.h  main.cpp
darwin/: CMakeLists.txt  grabcut.cpp  hello.cpp  inpaint.cpp  rf.cpp  superpixel.cpp  texton.cpp
medical/: CMakeLists.txt  MetaImageReader.cpp  nifti.cpp  volumeRender.cpp
opencv/: CMakeLists.txt
pcl/: CMakeLists.txt  plotter.cpp
python/: convolve2.pyx  convolve3.pyx  convolve4.pyx  kmeans_features.py  mnist_kernel_approx.py  mst.py  test.py  test.pyx  wrapper_example.py
python/EigenWrap/: CMakeLists.txt  Makefile  Project.cbp  __init__.py  cmake_install.cmake  setup.py  wrapper_example.cpp  wrapper_example.py
vtk/: CMakeLists.txt  volumeRender.cpp
