cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} /usr/lib/i386-linux-gnu/)
find_package(X11)
  if(NOT X11_FOUND)
    message(FATAL_ERROR "Failed to find X11 which is required to build nsu")
endif(NOT X11_FOUND)
set(LIBS ${LIBS} ${X11_LIBRARIES} m pthread)
file(GLOB cppsource *.cpp)
foreach(src ${cppsource})
  get_filename_component(name ${src} NAME_WE)
  add_executable(${name} ${src})
  target_link_libraries(${name} ${LIBS})
endforeach()  
