cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
set(CMAKE_LIBRARY_PATH ${CMAKE_LIBRARY_PATH} /usr/lib/i386-linux-gnu/)
find_package(X11)
set(LIBS ${LIBS} ${X11_LIBRARIES} m pthread)
file(GLOB cppsource *.cpp)
foreach(src ${cppsource})
  get_filename_component(name ${src} NAME_WE)
  add_executable(${name} ${src})
  target_link_libraries(${name} ${LIBS})
endforeach()  
