cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(darwin)
set(DARWIN /home/masa/vision/lib/darwin.1.5)
include_directories(${DARWIN}/include ${DARWIN}/external)
link_directories(${DARWIN}/bin)
find_package(OpenCV REQUIRED COMPONENTS)
include_directories(${OpenCV_INCLUDE_DIRS})
#add_definitions(-DDEBUG)
link_directories(${OpenCV_LIBRARY_DIRS})
set(LIBS drwnVision drwnML drwnPGM drwnIO drwnBase m pthread ${OpenCV_LIBRARIES})
file(GLOB cppsource *.cpp)
foreach(src ${cppsource})
  get_filename_component(name ${src} NAME_WE)
  add_executable(${name} ${src})
  target_link_libraries(${name} ${LIBS})
endforeach()  
