cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(darwin)
set(DARWIN /home/masa/project/vision/lib/trunk)
include_directories(${DARWIN}/include ${DARWIN}/external)
link_directories(${DARWIN}/bin)
find_package(OpenCV REQUIRED COMPONENTS)
include_directories(${OpenCV_INCLUDE_DIRS} ${DARWIN}/include)
#add_definitions(-DDEBUG)
link_directories(${OpenCV_LIBRARY_DIRS})
file(GLOB DARWIN_LIB ${DARWIN}/bin/lib/*)
set(LIBS  ${DARWIN_LIB} m pthread ${OpenCV_LIBRARIES})
# file(GLOB cppsource *.cpp)
add_definitions(-g)
foreach(src ${DARWIN_LIB})
  message(${src})
#   get_filename_component(name ${src} NAME_WE)
#   add_executable(${name} ${src})
#   target_link_libraries(${name} ${LIBS})
endforeach()  
add_executable(rf rf.cpp)
target_link_libraries(rf ${LIBS})
