cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(medical)
find_package(VTK)
find_package(ITK)
include(${ITK_USE_FILE})

if(ITKVtkGlue_LOADED)
  find_package(VTK REQUIRED)
  include(${VTK_USE_FILE})
else()
  find_package(ItkVtkGlue REQUIRED)
  include(${ItkVtkGlue_USE_FILE})
  set(Glue ItkVtkGlue)
endif()

include(${VTK_USE_FILE})

set(LIB ${ITK_LIBRARIES} ${VTK_LIBRARIES} ${ItkVtkGlue})
file(GLOB cppsource *.cpp)
foreach(src ${cppsource})
  get_filename_component(name ${src} NAME_WE)
  add_executable(${name} ${src})
  target_link_libraries(${name} ${LIB})
endforeach()  
