cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(opencv)
find_package(OpenCV REQUIRED COMPONENTS)
include_directories(${OpenCV_INCLUDE_DIRS})
link_directories(${OpenCV_LIBRARY_DIRS})
add_definitions(${OpenCV_DEFINITIONS})
file(GLOB cppsource *.cpp)
foreach(src ${cppsource})
  get_filename_component(name ${src} NAME_WE)
  add_executable(${name} ${src})
  target_link_libraries(${name} ${OpenCV_LIBRARIES})
endforeach()  
