cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(pcl)
find_package(PCL 1.7 REQUIRED COMPONENTS)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
file(GLOB cppsource *.cpp)
foreach(src ${cppsource})
  get_filename_component(name ${src} NAME_WE)
  add_executable(${name} ${src})
  target_link_libraries(${name} ${PCL_LIBRARIES})
endforeach()  
