cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(vtk)
find_package(VTK)
include(${VTK_USE_FILE})
file(GLOB cppsource *.cpp)
foreach(src ${cppsource})
  get_filename_component(name ${src} NAME_WE)
  add_executable(${name} ${src})
  target_link_libraries(${name} ${VTK_LIBRARIES})
endforeach()  
